[tool]
[tool.poetry]
name = "strax"
version = "1.6.5"
description = "Streaming analysis for xenon TPCs"
readme = "README.md"
authors = [
  "strax developers",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
repository = "https://github.com/AxFoundation/strax"

[tool.poetry.dependencies]
python = ">=3.6,<3.13"
blosc = "*"
click = "*"
deepdiff = "*"
dill = "*"
fsspec = "*"
immutabledict = "*"
lz4 = "*"
numba = ">=0.43.1"
numexpr = "*"
numpy = ">=1.18.5,<2.0.0"
packaging = "*"
pandas = "*"
pdmongo = "*"
psutil = "*"
pymongo = "*"
scipy = "*"
tqdm = ">=4.46.0"
zarr = "*"
zstd = "*"
sharedarray = { url = "https://xenon.isi.edu/python/SharedArray-3.2.3.tar.gz", optional = true, extras = ["tests"] }
base_environment = { git = "https://github.com/XENONnT/base_environment.git", optional = true, extras = ["tests"] }
sphinx = { version = "*", optional = true, extras = ["docs"] }
sphinx_rtd_theme = { version = "*", optional = true, extras = ["docs"] }
nbsphinx = { version = "*", optional = true, extras = ["docs"] }
recommonmark = { version = "*", optional = true, extras = ["docs"] }
graphviz = { version = "*", optional = true, extras = ["docs"] }
m2r = { version = "*", optional = true, extras = ["docs"] }
mistune = { version = "0.8.4", optional = true, extras = ["docs"] }
urllib3 = { version = "2.2.2", optional = true, extras = ["docs"] }
lxml_html_clean = { version = "*", optional = true, extras = ["docs"] }

[tool.poetry.extras]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "nbsphinx",
  "recommonmark",
  "graphviz",
  "m2r",
  "mistune",
  "urllib3",
  "lxml_html_clean",
]
tests = [
  "sharedarray",
  "base_environment",
]

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
preview = true

[tool.docformatter]
recursive = true
in-place = true
style = "sphinx"
wrap-summaries = 100
wrap-descriptions = 100
blank = true
